# OSMParser

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Database.cpp  Database.h  OSMDispatcher.cpp  OSMDispatcher.h  OSMParser.cpp  OSMParser.h  OSMWorker.cpp  OSMWorker.h  ThreadPool.cpp  ThreadPool.h  pch.h  utils.h
src/Proto/: CMakeLists.txt  ProtoStructs.h  fileformat.pb.cc  fileformat.pb.h  osmformat.pb.cc  osmformat.pb.h
